--- a/python-server_side_rendering/templates/contact.html
+++ b/python-server_side_rendering/templates/contact.html
@@ -1,7 +1,7 @@
    <!doctype html>
    <html lang="en">
     <head>
-        <title>My Flask App - About</title>
+        <title>My Flask App - Contact</title>
     </head>
     <body>
         {% include 'header.html' %}
