--- a/python-server_side_rendering/templates/items.html
+++ b/python-server_side_rendering/templates/items.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         {% include 'header.html' %}
+        <h1>Items</h1>
         {% if items %}
             <ul>
                 {% for item in items %}
