--- a/python-server_side_rendering/templates/header.html
+++ b/python-server_side_rendering/templates/header.html
@@ -5,6 +5,7 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
         <a href="/items">Items</a>
+        <a href="/products?source=json">Products</a>
        </nav>
    </header>
    
